# PythonForNLP-homework

./: .editorconfig  .gitignore  .pdm-python  .pdm.toml  README.md  pyproject.toml  rename.py
Python小屋/: 001.py  002.py  003.py  004.py  005.py  006.py  007.py  008.py  009.py  010.py  011.py  012.py  013.py  014.py  015.py  016.py  017.py  018.py  019.py  020.py  021.py  022.py  023.py  024.py  025.py  026.py  027.py  028.py  029.py  030.py  031.py  032.py  033.py  034.py  035.py  036.py  037.py  038.py  039.py  040.py  (+122 more)
src/: 02.py  03.py  04.py  05.py  06.py  tfidf.model
src/in/: 明朝那些事儿·伍.txt  明朝那些事儿·叁.txt  明朝那些事儿·壹.txt  明朝那些事儿·柒.txt  明朝那些事儿·肆.txt  明朝那些事儿·贰.txt  明朝那些事儿·陆.txt
美食/: patch.diff  午饭.csv  早饭.csv  晚饭.csv  随机美食2.py  随机美食3.py
讨论/: 02.py  03.py  04.py
附件/: PythonForNLP_作业01、编写Python程序输出个人信息 .txt  PythonForNLP_作业02、寻找黑洞数.txt  PythonForNLP_作业03、寻找众数.txt  PythonForNLP_作业04、广义回文.txt  PythonForNLP_作业05、过桥问题.txt  PythonForNLP_作业06、报告版.txt  PythonForNLP_作业06、编程版.txt  PythonForNLP_讨论01、用董付国老师的“Python小屋刷题软件”有奖刷题(1).txt  PythonForNLP_讨论02、画图.txt  PythonForNLP_讨论03、精简画图程序.txt  PythonForNLP_讨论04、探索123456789问题.txt  正则表达式替换示例：去掉数字两边的一对圆括号.txt
