[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Master-Hash", email = "hash@hash.memorial"},
]
dependencies = [
    "python-docx>=0.8.11",
    "pypinyin>=0.48.0",
    "numpy>=1.24.2",
    "nltk>=3.8.1",
    "gensim>=4.3.1",
]
requires-python = ">=3.11"
license = {text = "Unlicense"}

[tool.pdm.scripts]
pkg.cmd = "python rename.py"
pkg.env_file = ".env"
